--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -9,6 +9,9 @@ $color-red-1: #ff3f80;
 $color-green-1: #5ae4ca;
 //Font-size
 $fs-14: 14px;
-
+$fs-16: 16px;
+//Spacing
+$sp-20: 20px;
 //Box-shadow
 $box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.24);
+
